<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com | smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）
基于GPLv3和LGPLv3发布

==========更新日志==========


==========6.6==========
2025-9-14
1. v/h Panel当添加未指定控件元素时，每次布局实时获得控件元素尺寸
2. 优化对话框底栏

==========6.5==========
2025-9-8
1. v/h Panel 新增删除特定子元素、忽略特定子元素功能

==========6.4==========
2025-9-5
1. 简化浮出窗口实现
2. Panel.add_child添加索引参数
3. 新增segmentbutton 分段按钮

==========6.3==========
2025-8-18
1. 优化listview的居中计算，更准确
2. menubutton支持Segoe图标
3. menubar支持按钮Segoe图标
4. HorizonPanel, VerticalPanel添加clear_children方法
5. entry标识符改为Segoe Fluent Icon字符

==========6.2==========
2025-8-16
1. listview选项背景改为圆角，注意，使用内部ui绘制背景
2. 提供Mac下的字体解决建议
3. listview程序选择时会尽量将选项保持在视图中央
4. radiobutton选项背景改为圆角
5. progressbar使用圆角
6. textbox使用圆角并取消边框宽度参数
7. 添加button2延申样式accentbutton, toolbutton
***破坏性更新***
从TinUI-6.2版本开始，暗色样式正式匹配WinUI3暗色，亮色样式也将进行完全适配。
原本的Dark配色改名为淡钢蓝配色(SteelBlue)且不再更新。

==========6.1==========
2025-8-10
1. treeview拓展面板适配选项背景宽度
2. 纵向、横向面板添加控件未指定尺寸时，获取控件对应方向上的尺寸
3. TinUIXml支持tooltip

==========6.0==========
2025-8-2
1. 简化uid创建
2. picker选项响应鼠标进入颜色改为同按钮背景色
3. 弃用waitbar1, waitbar2, swipecontrol, info, canvas，但未删除
4. listview, notebook, treeview支持对齐方式
5. 控件创建函数删除不必要的变量
6. 支持版面布局Panel:
- ExpandPanel: one widget/Panel，响应窗口缩放
- VerticalPanel: multiple widgets/Panels，纵向排列
- HorizontalPanel: multiple widgets/Panels，横向排列
支持（expand, vertical/horizontal）:
title v/h
paragraph v/h
button expand, v/h
label expand, v/h
checkbutton v/h
entry expand, v/h
separate expand, v/h
radiobutton v/h
link v/h
combobox v/h
progressbar expand, v/h
table v/h
onoff v/h
spinbox v/h
scalebar v/h
waitbar3 expand, v/h
textbox expand, v/h
listbox expand, v/h
listview expand, v/h
ui expand, v/h
pipspager expand, v/h
notebook expand, v/h
ratingbar v/h
radiobox v/h
pivot v/h
button2 expand, v/h
waitframe expand, v/h
treeview expand, v/h
passwordbox expand, v/h
image v/h