@@ -155,7 +155,7 @@ add_progressbar(self,pos:tuple,width=250,fg='#868686',bg='#334ac0',back='#f3f3f3
 ## scalebar
 
 ```python
-add_scalebar(self,pos:tuple,width=200,fg='#4554dc',activefg='#4554dc',bg='#868686',buttonbg='#ffffff',buttonoutline='#cccccc',data=(1,2,3,4,5),start=1,anchor='nw',command=None)
+add_scalebar(self,pos:tuple,width=200,fg='#4554dc',activefg='#4554dc',bg='#868686',buttonbg='#ffffff',buttonoutline='#cccccc',data=(1,2,3,4,5),start=1,anchor='nw',direction='x',command=None)
 ```
 
 - pos::位置
@@ -167,6 +167,7 @@ add_scalebar(self,pos:tuple,width=200,fg='#4554dc',activefg='#4554dc',bg='#86868
 - buttonoutline::按钮边框色
 - data::选值范围
 - start::初始位置，第一个位置是0，第二个位置是1……
+- direction::`x`表示横向，`y`表示纵向
 - command::选值完成后调用该函数，必须接受一个参数，这个参数为data中的一个值
 
 绘制一个滑动调节框。
