@@ -6,6 +6,13 @@
 ==========更新日志==========
 
 
+==========6.7==========
+2025-
+1. 测试代码不受GPLv3和LGPLv3限制
+2. scalebar支持纵向
+3. 优化scalebar移动响应
+*4. 修复scalebar使用面板布局移动回调出错的问题，并适配ExpandPanel
+
 ==========6.6==========
 2025-9-14
 1. v/h Panel当添加未指定控件元素时，每次布局实时获得控件元素尺寸
